added new charts in report page

--- a/public/locales/en/clinicReports.json
+++ b/public/locales/en/clinicReports.json
@@ -1,7 +1,7 @@
 {
     "title": "Clinic Data Analytics & Reports",
-    "subtitle1": "Analysis on Patient Visits",
-    "subtitle2": "Analysis on Patient Visits For each clinic",
+    "subtitle1": "Analysis of Patient Visits",
+    "subtitle2": "Analysis of Patient Visits For each clinic",
     "generate1": "Generate a report",
     "generate2": "Generate a report"
 }
