--- a/public/locales/sin/clinicReports.json
+++ b/public/locales/sin/clinicReports.json
@@ -1,7 +1,7 @@
 {
-    "title": "Clinic Data Analytics & Reports",
-    "subtitle1": "Analysis on Patient Visits",
-    "subtitle2": "Analysis on Patient Visits For each clinic",
-    "generate1": "Generate a report",
-    "generate2": "Generate a report"
+    "title": "සායන දත්ත විශ්ලේෂණ සහ වාර්තා",
+    "subtitle1": "රෝගීන්ගේ පැමිණීම් පිළිබඳ විශ්ලේෂණය",
+    "subtitle2": "එක් එක් සායන සඳහා රෝගීන්ගේ පැමිණීම් විශ්ලේෂණය",
+    "generate1": "වාර්තාව ලබා ගන්න",
+    "generate2": "වාර්තාව ලබා ගන්න"
 }
