--- a/public/locales/en/signup.json
+++ b/public/locales/en/signup.json
@@ -11,5 +11,5 @@
   "continue": "Or Continue With",
   "signup": "Sign up now",
   "member": "Already a member?",
-  "login": "LOG IN"
+  "login": "SIGN IN"
 }
