--- a/public/locales/en/login.json
+++ b/public/locales/en/login.json
@@ -1,11 +1,11 @@
 {
   "image-text": "\"Two lives, one journey. Together, we protect the bond between mother and child for a healthier future.\"",
-  "title": "Log in with Maathru",
+  "title": "Sign in with Maathru",
   "username": "Username",
   "password": "Password",
   "forgot": "Forgot Password?",
   "continue": "Or Continue With",
-  "login": "Log In",
+  "login": "Sign In",
   "newMember": "New member?",
   "signup": "SIGN UP"
 }
